# hermes-dashboard

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PRODUCT.md  README.md  cutover.sh  deploy.sh  docker-compose.yml  rollback.sh
.github/workflows/: ci.yml
backend/: .env.docker  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: connection.py
backend/app/db/migrations/: 001_users_channels_sessions.sql
backend/app/middleware/: auth.py
backend/app/models/: knowledge.py  user.py
backend/app/routers/: auth.py  chat.py  cron.py  knowledge.py  sessions.py  skills.py  system.py
backend/app/services/: knowledge_vault.py  user_service.py
backend/hermes_dashboard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_knowledge_api.py  test_knowledge_service.py  test_phase3.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/blueprints/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/cron/: page.tsx
frontend/app/doctor/: page.tsx
frontend/app/files/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/holygraph/: page.tsx
frontend/app/hub/: page.tsx
frontend/app/kanban/: page.tsx
frontend/lib/: api.ts  utils.ts  ws.ts
frontend/playwright-report/: index.html
frontend/public/: manifest.json  sw.js
frontend/styles/: globals.css
frontend/tests/: smoke.spec.ts
(+35 files in other folders)
